--- a/css/stylo.css
+++ b/css/stylo.css
@@ -81,15 +81,9 @@
   .ContenedorProducto--Img {
     margin: 19px 0px 0px 0px; }
   .ContenedorProducto--Img2 {
-    margin: 19px 0px 0px 0px; }
+    margin: 2px 0px 0px 0px; }
   .ContenedorProducto--Img3 {
     margin: 19px 0px 0px 0px; }
-
-.SocialDelIndex {
-  margin: 0px 0px -41px 0px;
-  text-align: right; }
-  .SocialDelIndex--TamañoIndex {
-    width: 40px; }
 
 /*Inicio De Sesion*/
 .ArribaSesion {
@@ -113,7 +107,7 @@
   border: 1px;
   background-color: aliceblue;
   border-radius: 20px;
-  margin: 80px 457px 80px 482px; }
+  margin: 99px 457px 99px 482px; }
   .InicioDeSesion__Titulo {
     font-size: 40px; }
     .InicioDeSesion__Titulo--Decoracion {
@@ -141,12 +135,6 @@
 .BotonDeInicioDeSesion:hover {
   background-color: green;
   border-color: green; }
-
-.Social {
-  margin: 0px 0px -41px 0px;
-  text-align: right; }
-  .Social--Tamaño {
-    width: 40px; }
 
 /*Crear Cuenta*/
 .CrearCuenta {
@@ -252,7 +240,7 @@
   text-align: center;
   border: none;
   padding: 20px;
-  margin: 175px 500px 335px 489px;
+  margin: 271px 500px 271px 489px;
   background-color: #101010a3;
   border-radius: 9px; }
   .Titulos--Tamaños {
@@ -268,6 +256,17 @@ body {
 .Barra {
   background-color: grey;
   margin: 0px 3px 0px 3px; }
+
+.ParteDeAbajoColor {
+  background-color: white;
+  padding: 1px;
+  margin: 15px 0px -11px 0px; }
+
+.Social {
+  margin: 0px 0px -30px 0px;
+  text-align: right; }
+  .Social--TamañoIndex {
+    width: 40px; }
 
 /*Contacto*/
 .ArribaContacto {
@@ -340,7 +339,7 @@ body {
     font-size: 17px;
     background: transparent;
     display: initial;
-    width: 222px;
+    width: 460px;
     padding: 7px;
     border: none;
     margin: 15px -86px 30px 140px;
@@ -384,208 +383,6 @@ body {
     font-size: 17px;
     width: 90px; }
 
-/*Crea tu Pc*/
-.ArribaCrearPc {
-  background-color: black;
-  margin: -20px 3px -8px 3px; }
-  .ArribaCrearPc--ImagenCrearPc {
-    margin: 7px 1px -7px 7px; }
-  .ArribaCrearPc--TituloCrearPc {
-    color: White;
-    position: absolute;
-    left: 895px;
-    right: 8px;
-    bottom: 838px;
-    font-size: 40px;
-    font-family: initial; }
-
-.Seleccionado1 {
-  padding: 0px;
-  margin: 6px 1px 2px 59px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado1__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado2 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado2__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado3 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado3__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado4 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado4__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado5 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado5__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado6 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado6__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado7 {
-  padding: 0px;
-  margin: 6px 1px 2px 138px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado7__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado8 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado8__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado9 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado9__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado10 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado10__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado11 {
-  padding: 0px;
-  margin: 6px 1px 2px 0px;
-  background: transparent;
-  border: transparent;
-  border-radius: 5px; }
-  .Seleccionado11__estilo {
-    width: auto;
-    font-size: 0px;
-    border: 1px solid;
-    border-radius: 5px;
-    margin-top: 0px;
-    cursor: pointer; }
-
-.Seleccionado1:focus {
-  background-color: white; }
-
-.Seleccionado2:focus {
-  background-color: white; }
-
-.Seleccionado3:focus {
-  background-color: white; }
-
-.Seleccionado4:focus {
-  background-color: white; }
-
-.Seleccionado5:focus {
-  background-color: white; }
-
-.Seleccionado6:focus {
-  background-color: white; }
-
-.Seleccionado7:focus {
-  background-color: white; }
-
-.Seleccionado8:focus {
-  background-color: white; }
-
-.Seleccionado9:focus {
-  background-color: white; }
-
-.Seleccionado10:focus {
-  background-color: white; }
-
-.Seleccionado11:focus {
-  background-color: white; }
-
 /*Producto*/
 .ArribaProducto {
   background-color: black;
@@ -603,23 +400,29 @@ body {
 
 .PosicionProducto {
   position: absolute;
-  bottom: 344px;
-  left: 860px; }
+  bottom: 160px;
+  left: 998px;
+  padding: 1px 103px 178px 14px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background: #f9f9f9; }
   .PosicionProducto--Precio {
-    position: absolute;
-    bottom: 75px;
-    left: 175px;
-    font-size: 33px; }
+    position: relative;
+    bottom: -21px;
+    left: 0px;
+    width: 120px;
+    font-size: 30px; }
   .PosicionProducto--cuotas {
-    position: absolute;
-    bottom: 51px;
-    left: 178px;
-    font-size: 24px;
+    position: relative;
+    bottom: -2px;
+    left: 3px;
+    width: 240px;
+    font-size: 22px;
     color: #5bb15b; }
   .PosicionProducto--Stock {
-    position: absolute;
-    bottom: 213px;
-    left: 470px;
+    position: relative;
+    bottom: -1px;
+    left: 184px;
     font-size: 18px;
     color: #ffffff;
     width: 155px;
@@ -628,16 +431,16 @@ body {
     border-radius: 5px;
     padding: 6px; }
   .PosicionProducto--Nombre {
-    position: absolute;
-    width: 500px;
-    bottom: 201px;
-    right: -280px;
-    font-size: 40px; }
+    position: relative;
+    width: 236px;
+    bottom: 0px;
+    right: -2px;
+    font-size: 20px; }
 
 .DemostracionDelProducto {
   border: 1px solid;
   display: grid;
-  width: 1100px;
+  width: 970px;
   padding: 59px 0px 57px 29px;
   margin-top: 100px;
   border-radius: 4px;
@@ -645,25 +448,30 @@ body {
   grid-template-rows: 0px 70px 70px 70px 70px;
   grid-column-gap: 0px;
   grid-row-gap: 19px;
-  margin: 0px 395px 60px; }
+  margin: 0px 395px 60px;
+  background: #e4e4e4; }
   .DemostracionDelProducto--estilo {
     margin: 0px 120px; }
   .DemostracionDelProducto--estilo2 {
     border: 1px solid #ffffff;
     border-radius: 10px;
-    background: white; }
+    background: white;
+    cursor: pointer; }
   .DemostracionDelProducto--estilo3 {
     border: 1px solid #ffffff;
     border-radius: 10px;
-    background: white; }
+    background: white;
+    cursor: pointer; }
   .DemostracionDelProducto--estilo4 {
     border: 1px solid #ffffff;
     border-radius: 10px;
-    background: white; }
+    background: white;
+    cursor: pointer; }
   .DemostracionDelProducto--estilo5 {
     border: 1px solid #ffffff;
     border-radius: 10px;
-    background: white; }
+    background: white;
+    cursor: pointer; }
 
 .ProductoVenta {
   position: absolute;
@@ -671,7 +479,7 @@ body {
   bottom: 170px; }
   .ProductoVenta--Carrito {
     position: absolute;
-    left: 98px;
+    left: -65px;
     bottom: 86px;
     width: 160px;
     font-size: 17px;
@@ -682,19 +490,19 @@ body {
     padding: 7px; }
   .ProductoVenta--Cantidad {
     position: absolute;
-    left: 118px;
+    left: -44px;
     bottom: 41px;
     width: 125px;
     font-size: 15px;
     color: #000;
-    background-color: #00bcd4;
+    background-color: #c3f5fb;
     border-color: #b4b8bd00;
     border-radius: 6px;
     padding: 7px; }
   .ProductoVenta--BotonDeComprar {
     position: absolute;
     bottom: -3px;
-    left: 134px;
+    left: -24px;
     font-size: 17px;
     color: #fff;
     background-color: #007bff;
@@ -728,22 +536,26 @@ body {
     margin-top: -190px; }
   .PosicionProducto {
     position: relative;
-    bottom: 1px;
-    left: 1px; }
+    bottom: -115px;
+    left: 1px;
+    padding: 0px;
+    border: 1px;
+    border-radius: 0px;
+    background: transparent; }
     .PosicionProducto--Precio {
       position: relative;
-      bottom: -430px;
-      left: 52px;
+      bottom: -165px;
+      left: 44px;
       font-size: 32px;
-      width: 100px; }
+      width: 170px; }
     .PosicionProducto--cuotas {
       position: relative;
-      bottom: -406px;
-      left: 60px;
+      bottom: -143px;
       right: 0px;
+      left: 24px;
       font-size: 24px;
       color: #5bb15b;
-      width: 100px; }
+      width: 185px; }
     .PosicionProducto--Stock {
       position: relative;
       bottom: 110px;
@@ -757,19 +569,19 @@ body {
       padding: 6px; }
     .PosicionProducto--Nombre {
       position: relative;
-      width: 80px;
-      bottom: 110px;
-      right: -195px;
+      width: 289px;
+      bottom: 121px;
+      right: -82px;
       font-size: 22px; }
   .DemostracionDelProducto {
     display: grid;
     border-radius: 4px;
     grid-template-columns: 70px;
     grid-template-rows: 0px 70px 70px 70px 70px;
-    margin: 4px 0px 215px;
+    margin: -202px 0px 184px;
     border: none;
     padding: 0;
-    width: 350px; }
+    width: 375px; }
     .DemostracionDelProducto--estilo {
       margin: 70px 114px; }
     .DemostracionDelProducto--estilo2 {
@@ -859,7 +671,7 @@ body {
     color: black; }
   .LoMasPopular {
     margin: 5px 4px 5px 55px;
-    width: 329px;
+    width: 330px;
     color: black;
     font-family: 'Merriweather', serif; }
   .ContenedorLoMasPopular {
@@ -960,12 +772,7 @@ body {
     border-radius: 2px; }
   .BotonDeInicioDeSesion:hover {
     background-color: green;
-    border-color: green; }
-  .Social {
-    margin: 0px 0px -41px 0px;
-    text-align: right; }
-    .Social--Tamaño {
-      width: 40px; } }
+    border-color: green; } }
 
 @media only screen and (min-width: 375px) and (max-width: 667px) {
   .ArribaCrear {
@@ -1061,7 +868,7 @@ body {
     text-align: center;
     border: none;
     padding: 20px;
-    margin: 175px 0px 335px 0px;
+    margin: 122px 0px 122px 0px;
     background-color: #101010a3;
     border-radius: 9px; }
     .Titulos--Tamaños {
@@ -1178,189 +985,3 @@ body {
       padding: 7px;
       font-size: 17px;
       width: 90px; } }
-
-@media only screen and (min-width: 375px) and (max-width: 667px) {
-  .ArribaCrearPc {
-    background-color: black;
-    margin: -20px 3px -8px 3px; }
-    .ArribaCrearPc--ImagenCrearPc {
-      margin: 7px 1px -7px 7px; }
-    .ArribaCrearPc--TituloCrearPc {
-      color: White;
-      position: absolute;
-      right: 55px;
-      bottom: 565px;
-      left: auto; }
-  .Seleccionado1 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado1__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer;
-      /*
-    &--Text{
-    font-size: 0px;
-    }
-    &--Text:focus{
-    transition: 1s;
-    font-size: 20px;
-    }*/ }
-  .Seleccionado2 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado2__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado3 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado3__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado4 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado4__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado5 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado5__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado6 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado6__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado7 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado7__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado8 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado8__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado9 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado9__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado10 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado10__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado11 {
-    padding: 0px;
-    margin: 6px 1px 2px 0px;
-    background: transparent;
-    border: transparent;
-    border-radius: 5px; }
-    .Seleccionado11__estilo {
-      width: 50px;
-      font-size: 0px;
-      border: 1px solid;
-      border-radius: 5px;
-      margin-top: 0px;
-      cursor: pointer; }
-  .Seleccionado1:focus {
-    background-color: white; }
-  .Seleccionado2:focus {
-    background-color: white; }
-  .Seleccionado3:focus {
-    background-color: white; }
-  .Seleccionado4:focus {
-    background-color: white; }
-  .Seleccionado5:focus {
-    background-color: white; }
-  .Seleccionado6:focus {
-    background-color: white; }
-  .Seleccionado7:focus {
-    background-color: white; }
-  .Seleccionado8:focus {
-    background-color: white; }
-  .Seleccionado9:focus {
-    background-color: white; }
-  .Seleccionado10:focus {
-    background-color: white; }
-  .Seleccionado11:focus {
-    background-color: white; } }
